syntax = "proto3";

package protobuff;

message SummaryPb {
    int32 totalHits= 1;
}
